# babushka-rust

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker.yml  release.yml
src/: animals.rs  fortune.rs  main.rs  randoms.rs  urbandict.rs  web_helper.rs
