[package]
name = "babushka"
version = "0.3.3"
authors = ["Tosil Velkov"]
license = "MIT"
edition = "2018"

[dependencies]
serenity = "0.8"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0"
rand = "0.7"
url = "2.1.0"
memelord = { git = "https://github.com/Tvel/memelord-rs" }