[package]
name = "babushka"
version = "0.4.0"
authors = ["Tosil Velkov"]
license = "MIT"
edition = "2018"

[dependencies]
serenity = "0.11"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde_json = "1.0"
rand = "0.8"
url = "2.2.2"
memelord = { git = "https://github.com/Tvel/memelord-rs" }

[dependencies.tokio]
version = "1.18"
features = ["macros", "rt-multi-thread"]